--- a/src/app/auth/signin/signin.css
+++ b/src/app/auth/signin/signin.css
@@ -1,50 +1,27 @@
-.bi {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
+html,
+body {
+  height: 100%;
 }
 
-/*
- * Sidebar
- */
-
-@media (min-width: 768px) {
-  .sidebar .offcanvas-lg {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 48px;
-  }
-  .navbar-search {
-    display: block;
-  }
+.form-signin {
+  max-width: 330px;
+  padding: 1rem;
 }
 
-.sidebar .nav-link {
-  font-size: .875rem;
-  font-weight: 500;
+.form-signin .form-floating:focus-within {
+  z-index: 2;
 }
 
-.sidebar .nav-link.active {
-  color: #2470dc;
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
-.sidebar-heading {
-  font-size: .75rem;
-}
-
-/*
- * Navbar
- */
-
-.navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar .form-control {
-  padding: .75rem 1rem;
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .bd-placeholder-img {
@@ -123,3 +100,6 @@
   .bd-mode-toggle .dropdown-menu .active .bi {
     display: block !important;
   }
+
+
+  
